# src/routes/api/user.route.js
@@ -14,7 +14,7 @@ router.post('/password/reset', validate(validation.resetPassword), controller.re
 
 router.post('/password/reset/request', validate(validation.sendPasswordReset), controller.sendPasswordReset);
 
-router.post('/check', validate(validation.checkAvailability), controller.isAvailable);
+router.get('/check/username', validate(validation.isUsernameAvailable), controller.isUsernameAvailable);
 
 router.put('/username', validate(validation.setUsername), auth({ usernameRequired: false }), controller.setUsername);
 
